--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "font-awesome": "^4.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8",
-    "reactstrap": "^8.0.0"
+    "react-photo-gallery": "^7.0.2",
+    "react-scripts": "2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
